<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meta_chassis_controller</name>
  <version>0.0.0</version>
  <description>A ros2-control compatible chassis controller for Meta-Team robots.</description>
  <maintainer email="chiming2@illinois.edu">Chiming Ni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>angles</depend>

  <depend>behavior_interface</depend>

  <depend>control_toolbox</depend>

  <depend>control_msgs</depend>

  <depend>controller_interface</depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>realtime_tools</depend>

  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>